--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,5 +7,6 @@
       <li><a href="/">Blogs</a></li>
       <li><a href="/about">About Me</a></li>
       <li><a href="/blogs/create">New Blog</a></li>
+      <li><a href="/friends">My Friends</a></li>
     </ul>
   </nav>
